# MemGPT-mini

./: .env.example  README.md  README_zh.md  demo.py  pyproject.toml
docs/: compaction.md  differences.md
memgpt/: __init__.py  agent.py  compaction.py  config.py  db.py
memgpt/memory/: archival.py  core_memory.py  recall.py
memgpt/tools/: base_tools.py
tests/: conftest.py  test_modules.py  test_story.py
