[project]
name = "memgpt-mini"
version = "0.1.0"
description = "A minimal from-scratch reproduction of MemGPT's core memory system"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "tiktoken>=0.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"
